# yousim

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  app.py  calls.py  docker-compose.yml  fly.toml  generate_fernet_key.py  main.py  pyproject.toml  test.py
webshell/: .dockerignore  .env.template  Dockerfile  README.md  config.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  share.html  tsconfig.json  vite.config.js
webshell/src/: auth.ts  constants.ts  display.ts  honcho.ts  input.ts  main.ts  share.ts  sim.ts  styles.ts  utils.ts
webshell/src/commands/: banner.ts  help.ts  login.ts
webshell/src/css/: style.css
