[tool.poetry]
name = "yousim"
version = "1.0.0"
description = "YouSim: Using Claude 3 Opus to Simulate identities located in the latent space"
authors = ["vintro <vince@plasticlabs.ai>", "vineeth <vineeth@plasticlabs.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mirascope = {extras = ["anthropic"], version = "^0.18.0"}
honcho-ai = "^0.0.14"
python-dotenv = "^1.0.1"
google-auth = "^2.30.0"
fastapi = "^0.111.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.5.1"}
pyjwt = "^2.8.0"
cryptography = "^43.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
